# gitminer-dash

./: .editorconfig  .gitignore  CODE_REVIEW_affinity_groups.md  CODE_VIRTUES.md  DUPLICATION_TODO.md  LICENSE  MOCKING_IN_PYTEST.md  README.md  RUFF_PENDING_RULES.md  TESTING_STANDARDS.md  VISUALIZATIONS.md  WARP.md  annotate  app.py  check  colors_def.sh  data.py  date_utils.py  dead_code.md  fixup  improved_affinity_network.py  mutate  onboard  prepare  pyproject.toml  run  run_with_coverage.sh  test  test_affinity_callback.py  test_affinity_groups.py  test_affinity_network.py  test_auto_scale_affinity.py  test_callback_message.py  test_dash_imports.py  test_date_utils.py  test_debug_callback.py  test_debug_visualization.py  test_exclude_one_element_communities.py  test_graph_issue.py  test_ideal_affinity.py  (+5 more)
algorithms/: README.md  affinity_analysis.py  affinity_calculator.py  chain_analyzer.py  chain_clamper.py  chain_layout.py  chain_models.py  chain_traversal.py  change_series.py  commit_filter.py  commit_frequency.py  commit_graph.py  conventional_commits.py  dataframe_builder.py  diff_analysis.py  figure_builder.py  file_changes.py  graph_statistics.py  sorted_tags.py  stacking.py  weekly_commits.py  word_frequency.py
docs/: ALGORITHMS_MAP.md
pages/: .diff_summary.py.swp  affinity_groups.py  change_types.py  codelines.py  conventional.py  diff_summary.py  merges.py  most_committed.py  strongest_pairings.py  test_strongest_pairings.py  weekly_commits.py
test_data/: affinity_network_results.json  network_comparison_results.json
tests/: __init__.py  conftest.py  test_affinity_analysis.py  test_affinity_calculator.py  test_affinity_callback.py  test_affinity_groups.py  test_affinity_groups_coverage.py  test_affinity_groups_specific_cases.py  test_affinity_network.py  test_auto_scale_affinity.py  test_chain_analyzer.py  test_chain_clamper.py  test_chain_layout.py  test_chain_traversal.py  test_codelines.py  test_commit_frequency.py  test_commit_graph.py  test_commit_messages_for_file.py  test_dash_imports.py  test_data_repo_name.py  test_dataframe_builder.py  test_date_utils.py  test_diff_analysis.py  test_exclude_one_element_communities.py  test_figure_builder.py  test_file_changes.py  test_git_file_pair.py  test_global_date_store.py  test_global_range_contract.py  test_graph_statistics.py  test_group_commits_table.py  test_ideal_affinity.py  test_ideal_affinity_algorithm.py  test_improved_affinity_network.py  test_most_committed.py  test_network_graph.py  test_node_calculation_functions.py  test_node_details_table.py  test_repository_path.py  test_strongest_pairings.py  (+4 more)
tests/test_data/: commits_last_5_years.json  commits_last_6_months.json  network_comparison_results.json
utils/: __init__.py  date_utils.py  git.py  logging_wrapper.py  plotly_utils.py  pre-commit
visualization/: __init__.py  common.py  network_graph.py  weekly_commits.py  word_frequency.py
