[project]
name = "gitminer-dash"
version = "0.1.0"
description = "Git Repository Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=3.2.0",
    "dead>=2.1.0",
    "gitpython>=3.1.44",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pandas-stubs==2.3.2.250926",
    "pyannotate>=1.2.0",
    "pytest>=8.3.5",
    "python-box>=7.3.2",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.14.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.ruff.lint]
# Keep rule set focused but expanding over time
select = ["E", "F", "S", "B", "UP", "PD", "SIM", "I", "C90"]
ignore = [
  # Black-compatible slicing
  "E203",
  # Comments and line length
  "E266", "E501",
  # Temporarily ignore unused imports until we tidy modules
  "F401",
]

[tool.ruff.lint.per-file-ignores]
# Allow assert in tests
"tests/**/*.py" = ["S101", "S110", "S112", "E402", "F841", "F541"]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "coverage>=7.11.0",
    "mutmut>=3.4.0",
    "mypy>=1.18.2",
    "pylint>=4.0.2",
    "pytest-random-order>=1.2.0",
    "pyupgrade>=3.21.0",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude mutation testing directory to avoid conftest conflicts
norecursedirs = ["mutants", ".git", ".pytest_cache", "__pycache__", "*.egg-info"]

[tool.mutmut]
paths_to_mutate = ["algorithms/", "pages/", "visualization/", "utils/"]
also_copy = ["data.py", "config.py"]
runner = "PYTHONPATH=.. uv run pytest"
tests_dir = ["tests/"]

